# axum-opentelemetry-middleware

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  build.rs  cliff.toml  lints.toml  rustfmt.toml
.github/workflows/: CODEOWNERS  rust.yml
examples/: simple.rs
src/: lib.rs  main.rs
tests/: basic_metrics_output.txt  setup.sh  tests.rs
