[package]
name = "axum-opentelemetry-middleware"
version = "0.2.1"
authors = []
edition = "2021"
resolver = "2"
publish = ["famedly"]


[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
bytes = "1.5.0"
futures = "0.3.29"
opentelemetry = { version = "0.21.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.22.0", features = ["metrics", "rt-tokio"] }
opentelemetry-prometheus = "0.14.1"
prometheus = "0.13.3"
time = "0.3.30"
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros"] }
tower = "0.4.13"

[dev-dependencies]
futures = "0.3.21"
http = "1.0.0"
regex = "1.5.5"
