[package]
name = "axum-opentelemetry-middleware"
version = "0.4.0"
authors = []
edition = "2021"
resolver = "2"
publish = ["famedly"]


[dependencies]
axum = { version = "0.8.6" }
bytes = "1.7.1"
futures = "0.3.30"
http-body-util = "0.1.2"
opentelemetry = { version = "0.29.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.29.0", features = ["metrics", "rt-tokio"] }
opentelemetry-prometheus = "0.29"
prometheus = "0.14.0"
time = "0.3.30"
tokio = { version = "1.38.1", features = ["rt-multi-thread", "macros"] }
tower = "0.5.1"

[dev-dependencies]
futures = "0.3.30"
http = "1.1.0"
pretty_assertions = "1.4.1"
regex = "1.10.6"
